<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>edu.ntnu.idatt2003.group14</groupId>
    <artifactId>Millions</artifactId>
    <version>1.0.0</version>

    <properties>
        <!-- Compiler -->
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Dependencies -->
        <javafx.version>25.0.1</javafx.version>
        <junit.version>6.0.1</junit.version>
        <mockito.version>5.22.0</mockito.version>

        <!-- Plugins -->
        <maven-compiler.version>3.14.1</maven-compiler.version>
        <maven-surefire.version>3.5.4</maven-surefire.version>
        <maven-assembly.version>3.8.0</maven-assembly.version>
        <maven-javadoc.version>3.12.0</maven-javadoc.version>
        <maven-checkstyle.version>3.6.0</maven-checkstyle.version>
        <javafx-maven.version>0.0.8</javafx-maven.version>
        <jpackage.version>1.7.4</jpackage.version>
        <gson.version>2.14.0</gson.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire.version}</version>
                <!-- I/O tests are skipped; run manually. -->
                <configuration>
                    <excludedGroups>integration</excludedGroups>
                </configuration>
            </plugin>

            <!-- Packages the app and all dependencies into a runnable JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven-assembly.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <archive>
                                <manifest>
                                    <mainClass>edu.ntnu.idatt2003.group14.Launcher</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Run with: mvn javafx:run -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx-maven.version}</version>
                <configuration>
                    <mainClass>edu.ntnu.idatt2003.group14.ui.App</mainClass>
                </configuration>
            </plugin>

            <!-- Generate Javadoc with: mvn javadoc:javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc.version}</version>
            </plugin>

            <!-- Enforces Google Java Style. Suppressions configured in checkstyle-suppressions.xml -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle.version}</version>
                <configuration>
                    <configLocation>google_checks.xml</configLocation>
                    <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
                    <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                    <failsOnError>true</failsOnError>

                    <!-- Fail build on all Checkstyle violations, including warnings -->
                    <!-- Skip Checkstyle locally with: mvn javafx:run -Dcheckstyle.skip -->
                    <violationSeverity>warning</violationSeverity>

                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage.version}</version>
                        <configuration>
                            <name>Millions</name>
                            <destination>target/dist</destination>
                            <input>target</input>
                            <mainJar>Millions-${version}.jar</mainJar>
                            <mainClass>edu.ntnu.idatt2003.group14.Launcher</mainClass>

                            <winShortcut>true</winShortcut>
                            <winMenu>true</winMenu>
                            <winDirChooser>true</winDirChooser>

                            <vendor>Team 14</vendor>

                            <type>EXE</type>   <!-- Windows -->
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>macos</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage.version}</version>
                        <configuration>
                            <name>Millions</name>
                            <destination>target/dist</destination>
                            <input>target</input>
                            <mainJar>Millions-${version}.jar</mainJar>
                            <mainClass>edu.ntnu.idatt2003.group14.Launcher</mainClass>

                            <winShortcut>true</winShortcut>
                            <winMenu>true</winMenu>
                            <winDirChooser>true</winDirChooser>

                            <vendor>Team 14</vendor>

                            <type>DMG</type>   <!-- macOS -->
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>linux</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage.version}</version>
                        <configuration>
                            <name>Millions</name>
                            <destination>target/dist</destination>
                            <input>target</input>
                            <mainJar>Millions-${version}.jar</mainJar>
                            <mainClass>edu.ntnu.idatt2003.group14.Launcher</mainClass>

                            <winShortcut>true</winShortcut>
                            <winMenu>true</winMenu>
                            <winDirChooser>true</winDirChooser>

                            <vendor>Team 14</vendor>

                            <type>DEB</type>   <!-- Linux -->
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
